--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -495,4 +495,8 @@
     <string name="action_url">自定义url</string>
     <string name="ok">确定</string>
     <string name="cancel">取消</string>
+    <string name="url_empty">url  is empty</string>
+    <string name="loading">loading</string>
+    <string name="error_no_response">no response</string>
+    <string name="no_proxies_found_in_response">no proxies</string>
 </resources>
